# weighted-regexp-rs

./: Cargo.toml  LICENSE  README.md
src/: core.rs  grammars.rs  lib.rs
src/weights/: mod.rs  recognize.rs
